Fix Cocoa widgets appshell workarounds for Camino crashing on exit. b=400321 r=joshmoz sr=roc a=belzner