widget/src/cocoa/nsAppShell.h
@@ -87,6 +87,7 @@ protected:
   PRPackedBool       mRunningEventLoop;
   PRPackedBool       mStarted;
   PRPackedBool       mTerminated;
+  PRPackedBool       mNotifiedWillTerminate;
   PRPackedBool       mSkippedNativeCallback;
 
   // mHadMoreEventsCount and kHadMoreEventsCountMax are used in
